logs/valinor.log
Listing '.'...
Listing './bin'...
Compiling './bin/bin2hex.py'...
Compiling './bin/hex2bin.py'...
Compiling './bin/hex2dump.py'...
Compiling './bin/hexdiff.py'...
Compiling './bin/hexinfo.py'...
Compiling './bin/hexmerge.py'...
Compiling './bin/readelf.py'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/elftools'...
Listing './lib/python3.5/site-packages/elftools/common'...
Listing './lib/python3.5/site-packages/elftools/construct'...
Listing './lib/python3.5/site-packages/elftools/construct/lib'...
Listing './lib/python3.5/site-packages/elftools/dwarf'...
Listing './lib/python3.5/site-packages/elftools/elf'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/intelhex'...
Listing './lib/python3.5/site-packages/intelhex-2.1.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/project_generator'...
Listing './lib/python3.5/site-packages/project_generator/commands'...
Listing './lib/python3.5/site-packages/project_generator/templates'...
Listing './lib/python3.5/site-packages/project_generator/tools'...
Listing './lib/python3.5/site-packages/project_generator-0.8.16.egg-info'...
Listing './lib/python3.5/site-packages/project_generator_definitions'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/arm'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/arm-ssg'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/atmel'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/freescale'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/maxim'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/nordic'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/nuvoton'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/nxp'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/onsemi'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/renesas'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/siliconlabs'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/st'...
Listing './lib/python3.5/site-packages/project_generator_definitions/mcu/toshiba'...
Listing './lib/python3.5/site-packages/project_generator_definitions/target'...
Listing './lib/python3.5/site-packages/project_generator_definitions-0.2.35.egg-info'...
Listing './lib/python3.5/site-packages/pyOCD'...
Listing './lib/python3.5/site-packages/pyOCD/board'...
Listing './lib/python3.5/site-packages/pyOCD/coresight'...
Listing './lib/python3.5/site-packages/pyOCD/flash'...
Listing './lib/python3.5/site-packages/pyOCD/flash/analyzer'...
Listing './lib/python3.5/site-packages/pyOCD/gdbserver'...
Listing './lib/python3.5/site-packages/pyOCD/pyDAPAccess'...
Listing './lib/python3.5/site-packages/pyOCD/pyDAPAccess/interface'...
Listing './lib/python3.5/site-packages/pyOCD/target'...
Listing './lib/python3.5/site-packages/pyOCD/test'...
Listing './lib/python3.5/site-packages/pyOCD/test/test_target'...
Listing './lib/python3.5/site-packages/pyOCD/test/test_utility'...
Listing './lib/python3.5/site-packages/pyOCD/tools'...
Listing './lib/python3.5/site-packages/pyOCD/utility'...
Listing './lib/python3.5/site-packages/pyOCD-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/pyelftools-0.23.egg-info'...
Listing './lib/python3.5/site-packages/pyusb-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/usb'...
Listing './lib/python3.5/site-packages/usb/backend'...
Listing './lib/python3.5/site-packages/valinor'...
Listing './lib/python3.5/site-packages/valinor/test'...
Listing './lib/python3.5/site-packages/valinor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
